[tool.poetry]
name = "autotrash"
version = "0.0.0"
description = "Script to automatically purge old trash"
authors = ["Bram Neijt <bram@neijt.nl>"]
readme = "README.md"
repository = "https://github.com/bneijt/autotrash"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.poetry.dependencies]
python = ">=3.8, <4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.7.0"
twine = "^4.0.2"
mypy = "^1.5.1"
types-setuptools = "^68.2.0.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
autotrash = 'autotrash.app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
