[tool.poetry]
name = "autotrash"
version = "0.0.0"
description = "Script to automatically purge old trash"
authors = ["Bram Neijt <bram@neijt.nl>"]
readme = "README.md"
repository = "https://github.com/bneijt/autotrash"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.poetry.dependencies]
python = ">=3.8, <4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
types-setuptools = "^75.1.0.20240917"
pre-commit = "^3.4.0"
ruff = "^0.6.7"

[tool.poetry.scripts]
autotrash = 'autotrash.app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]