[metadata]
name = autotrash
description = Script to automatically purge old trash
author = Bram Neijt
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
package_dir = =src
include_package_data = True
setup_requires = setuptools_scm
python_requires = >= 3.5
install_requires =
    arrow >=0.14

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
     autotrash = autotrash.app:main

[test]
addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
norecursedirs =
    dist
    build
    .tox
testpaths = tests
python_functions =
    should_*
    test_*

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
